csclpp/src/csclpp/dts/SettingParser.py
# Generated from Setting.g4 by ANTLR 4.6
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO


from Study import Study
from Var import Var
import Setting as S
import Temp as T
import copy


class SettingParser ( Parser ):

    grammarFileName = "Setting.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'='", u"','", u"'.'", u"<INVALID>", 
                     u"'end'", u"'study'", u"'data'", u"'vardef'", u"'metadata'", 
                     u"'wresl'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"LINE_COMMENT", u"END", u"STUDY", u"DATA", u"VARDEF", 
                      u"METADATA", u"WRESL", u"ID", u"STRING", u"INT", u"NL", 
                      u"WS" ]

    RULE_prog = 0
    RULE_sty = 1
    RULE_field = 2
    RULE_data = 3
    RULE_vardef = 4
    RULE_meta = 5
    RULE_wresl = 6

    ruleNames =  [ u"prog", u"sty", u"field", u"data", u"vardef", u"meta", 
                   u"wresl" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    LINE_COMMENT=4
    END=5
    STUDY=6
    DATA=7
    VARDEF=8
    METADATA=9
    WRESL=10
    ID=11
    STRING=12
    INT=13
    NL=14
    WS=15

    def __init__(self, input):
        super(SettingParser, self).__init__(input)
        self.checkVersion("4.6")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SettingParser.ProgContext, self).__init__(parent, invokingState)
            self.parser = parser

        def NL(self, i=None):
            if i is None:
                return self.getTokens(SettingParser.NL)
            else:
                return self.getToken(SettingParser.NL, i)

        def sty(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(SettingParser.StyContext)
            else:
                return self.getTypedRuleContext(SettingParser.StyContext,i)


        def getRuleIndex(self):
            return SettingParser.RULE_prog

        def accept(self, visitor):
            if hasattr(visitor, "visitProg"):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = SettingParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        S.studyMap={}
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 17
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SettingParser.NL:
                self.state = 14
                self.match(SettingParser.NL)
                self.state = 19
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 21 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 20
                self.sty()
                self.state = 23 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==SettingParser.STUDY):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StyContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SettingParser.StyContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token

        def STUDY(self):
            return self.getToken(SettingParser.STUDY, 0)

        def END(self):
            return self.getToken(SettingParser.END, 0)

        def ID(self):
            return self.getToken(SettingParser.ID, 0)

        def NL(self, i=None):
            if i is None:
                return self.getTokens(SettingParser.NL)
            else:
                return self.getToken(SettingParser.NL, i)

        def field(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(SettingParser.FieldContext)
            else:
                return self.getTypedRuleContext(SettingParser.FieldContext,i)


        def getRuleIndex(self):
            return SettingParser.RULE_sty

        def accept(self, visitor):
            if hasattr(visitor, "visitSty"):
                return visitor.visitSty(self)
            else:
                return visitor.visitChildren(self)




    def sty(self):

        localctx = SettingParser.StyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_sty)
        T.sty=Study()
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 25
            self.match(SettingParser.STUDY)
            self.state = 26
            localctx.name = self.match(SettingParser.ID)
            self.state = 28 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 27
                self.match(SettingParser.NL)
                self.state = 30 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==SettingParser.NL):
                    break

            self.state = 33 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 32
                self.field()
                self.state = 35 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SettingParser.DATA) | (1 << SettingParser.VARDEF) | (1 << SettingParser.METADATA) | (1 << SettingParser.WRESL))) != 0)):
                    break

            self.state = 37
            self.match(SettingParser.END)
            self.state = 39 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 38
                self.match(SettingParser.NL)
                self.state = 41 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==SettingParser.NL):
                    break

            self._ctx.stop = self._input.LT(-1)
            stycopy=copy.deepcopy(T.sty);styName=str((None if localctx.name is None else localctx.name.text)); S.studyMap[styName]=stycopy;
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FieldContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SettingParser.FieldContext, self).__init__(parent, invokingState)
            self.parser = parser

        def data(self):
            return self.getTypedRuleContext(SettingParser.DataContext,0)


        def vardef(self):
            return self.getTypedRuleContext(SettingParser.VardefContext,0)


        def meta(self):
            return self.getTypedRuleContext(SettingParser.MetaContext,0)


        def wresl(self):
            return self.getTypedRuleContext(SettingParser.WreslContext,0)


        def NL(self, i=None):
            if i is None:
                return self.getTokens(SettingParser.NL)
            else:
                return self.getToken(SettingParser.NL, i)

        def getRuleIndex(self):
            return SettingParser.RULE_field

        def accept(self, visitor):
            if hasattr(visitor, "visitField"):
                return visitor.visitField(self)
            else:
                return visitor.visitChildren(self)




    def field(self):

        localctx = SettingParser.FieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_field)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SettingParser.DATA]:
                self.state = 43
                self.data()
                pass
            elif token in [SettingParser.VARDEF]:
                self.state = 44
                self.vardef()
                pass
            elif token in [SettingParser.METADATA]:
                self.state = 45
                self.meta()
                pass
            elif token in [SettingParser.WRESL]:
                self.state = 46
                self.wresl()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 50 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 49
                self.match(SettingParser.NL)
                self.state = 52 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==SettingParser.NL):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DataContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SettingParser.DataContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.s1 = None # Token
            self.s2 = None # Token

        def DATA(self):
            return self.getToken(SettingParser.DATA, 0)

        def STRING(self, i=None):
            if i is None:
                return self.getTokens(SettingParser.STRING)
            else:
                return self.getToken(SettingParser.STRING, i)

        def getRuleIndex(self):
            return SettingParser.RULE_data

        def accept(self, visitor):
            if hasattr(visitor, "visitData"):
                return visitor.visitData(self)
            else:
                return visitor.visitChildren(self)




    def data(self):

        localctx = SettingParser.DataContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_data)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(SettingParser.DATA)
            self.state = 55
            self.match(SettingParser.T__0)
            self.state = 56
            localctx.s1 = self.match(SettingParser.STRING)
            s1=(None if localctx.s1 is None else localctx.s1.text)[1:-1];T.sty.data_src.append(str(s1))
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SettingParser.T__1:
                self.state = 58
                self.match(SettingParser.T__1)
                self.state = 59
                localctx.s2 = self.match(SettingParser.STRING)
                s2=(None if localctx.s2 is None else localctx.s2.text)[1:-1];T.sty.data_src.append(str(s2))
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VardefContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SettingParser.VardefContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.f = None # Token
            self.d = None # Token

        def VARDEF(self):
            return self.getToken(SettingParser.VARDEF, 0)

        def ID(self, i=None):
            if i is None:
                return self.getTokens(SettingParser.ID)
            else:
                return self.getToken(SettingParser.ID, i)

        def getRuleIndex(self):
            return SettingParser.RULE_vardef

        def accept(self, visitor):
            if hasattr(visitor, "visitVardef"):
                return visitor.visitVardef(self)
            else:
                return visitor.visitChildren(self)




    def vardef(self):

        localctx = SettingParser.VardefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_vardef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(SettingParser.VARDEF)
            self.state = 67
            self.match(SettingParser.T__0)
            self.state = 68
            localctx.f = self.match(SettingParser.ID)
            self.state = 69
            self.match(SettingParser.T__2)
            self.state = 70
            localctx.d = self.match(SettingParser.ID)
            f=str((None if localctx.f is None else localctx.f.text));d=str((None if localctx.d is None else localctx.d.text));T.sty.varFile=f;T.sty.varDef=d;
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MetaContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SettingParser.MetaContext, self).__init__(parent, invokingState)
            self.parser = parser

        def METADATA(self):
            return self.getToken(SettingParser.METADATA, 0)

        def STRING(self):
            return self.getToken(SettingParser.STRING, 0)

        def getRuleIndex(self):
            return SettingParser.RULE_meta

        def accept(self, visitor):
            if hasattr(visitor, "visitMeta"):
                return visitor.visitMeta(self)
            else:
                return visitor.visitChildren(self)




    def meta(self):

        localctx = SettingParser.MetaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_meta)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(SettingParser.METADATA)
            self.state = 74
            self.match(SettingParser.T__0)
            self.state = 75
            self.match(SettingParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WreslContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SettingParser.WreslContext, self).__init__(parent, invokingState)
            self.parser = parser

        def WRESL(self):
            return self.getToken(SettingParser.WRESL, 0)

        def STRING(self):
            return self.getToken(SettingParser.STRING, 0)

        def getRuleIndex(self):
            return SettingParser.RULE_wresl

        def accept(self, visitor):
            if hasattr(visitor, "visitWresl"):
                return visitor.visitWresl(self)
            else:
                return visitor.visitChildren(self)




    def wresl(self):

        localctx = SettingParser.WreslContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_wresl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(SettingParser.WRESL)
            self.state = 78
            self.match(SettingParser.T__0)
            self.state = 79
            self.match(SettingParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





